[metadata]
name = heliq
version = attr: heliq.version.__version__
description = Quantification of helical morphologies
long_description = file: README.rst
long_description_content_type = text/markdown
author = Wouter Heyvaert
author_email = wouter.heyvaert@student.uantwerpen.be
url = https://github.com/wohe157/heliq
license = MIT
license_file = LICENSE
platforms = any

[options]
packages = heliq
package_dir =
    =src
install_requires =
    numpy
    scipy
    matplotlib
python_requires = >=3.7

[options.extras_require]
test =
    flake8
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
source = src
